compression error fixed
fixed compression error

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/Islamic Taboo.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Islamic Taboo.data.br",
-        frameworkUrl: buildUrl + "/Islamic Taboo.framework.js.br",
-        codeUrl: buildUrl + "/Islamic Taboo.wasm.br",
+        dataUrl: buildUrl + "/Islamic Taboo.data",
+        frameworkUrl: buildUrl + "/Islamic Taboo.framework.js",
+        codeUrl: buildUrl + "/Islamic Taboo.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "taboo",
